play animation button grayed out until active

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <header>
             <div id="startendButton">Place Start & End blocks</div>
             <div id="wallButton">Place Wall</div>
-            <div id="startButton">Start</div>
+            <div id="startButton">Find Path</div>
             <div id="clearButton">Clear Board</div>
-            <div id="replay">Show path</div>
+            <div id="replay" class="inactive">Play animation</div>
         </header>
         <div id="board"></div>
     </body>
